# heat-smoke-grid-risk

./: .gitignore  CITATION.cff  DATA_DICTIONARY.md  DATA_LICENSE.md  Makefile  Makefile_user  README.md  pyproject.toml  requirements.txt  sitecustomize.py
.github/workflows/: ci.yml
data/sample/: county_xwalk.csv  hms_smoke_2020-09-09.csv  outages_2018-09-14_sample.csv  pm25_cook_2019_2020.csv
metadata/: requirements-lock.txt  schema.panel.json
notebooks/: analysis.ipynb
paper/: README.md  draft_data_paper.md  validation_checks.ipynb
paper/tables/: correlations.csv  descriptive_stats_compact.csv  descriptive_stats_full.csv  eaglei_coverage.csv  table1_pilot_summary.csv
release/v1.2/metadata/: checksums.sha256
scripts/: build_panel.py  concat_panels.py  eaglei_coverage.py  fetch_hms.py  ingest_pm25.py  make_checksums.py  make_table1.py  plot_distributions.py  plot_smoke_county.py  smoke_intersect.py  validate_panel.py
src/hsg/: data_paths.py
src/hsg.egg-info/: PKG-INFO  SOURCES.txt
src/hsg/etl/: build_panel.py  build_panel_stdlib.py  fetch_eagle_outages.py  fetch_epa_pm25.py  fetch_hms_smoke.py
src/hsg/models/: event_models.py
src/hsg/viz/: plots.py
tests/: test_build_panel.py  test_min_outputs.py  test_schema.py  test_schemas.py
